# tauri-axum-next

./: .gitignore  Cargo.toml  Containerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: rust.yml
configuration/: base.yaml  local.yaml  production.yaml
podman/: podman-compose.yml
podman/sql/: 00-recreate-db.sql  01-create-schema.sql
scripts/: apt.sh
scripts/CI/: Dockerfile
scripts/podman/sql/: 01-create-schema.sql  02-dev-data-seed.sql
src-axum/: Cargo.toml  README.md
src-axum/conf/: secrets.env
src-axum/devlopment/dev_initial/: 01-create-schema.sql
src-axum/devlopment/podman/: podman-compose.yml
src-axum/examples/: quick_dev.rs
src-axum/src/: configuration.rs  error.rs  lib.rs  main.rs  startup.rs
src-axum/src/_dev_utils/: dev_db.rs  mod.rs
src-axum/src/constants/: settings.rs
src-axum/src/handler/: mod.rs  user_handler.rs
src-axum/src/model/: error.rs  mod.rs  user.rs
src-axum/src/service/: error.rs  mod.rs  user_service.rs
src-axum/tests/: main.rs  test_conf.rs
src-axum/tests/static/: base.yaml
src-next/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml
src-next/src/app/: layout.tsx
src-next/src/components/titlebar/: WindowTitleBar.tsx  titlebar.module.css
src-tauri/: tauri.conf.json
